<resources>
    <string name="google_map_api_key">AIzaSyAx0luzZzrD9_WcbI61etLbMEKfBlpn18A</string>
    <string name="app_name">ProjetMobile</string>
    <string name="home_button">Go To HomePage</string>
    <string name="welcome">Bienvenu !</string>
    <string name="nom_user">Ruben Yildiz</string>
    <string name="solde">2300€</string>
    <string name="Balance">Balance</string>
    <string name="Hello">Hello,</string>
    <string name="transfert">Transfert</string>
    <string name="account_type">Carte de crédit</string>
    <string name="accueil">Accueil</string>
    <string name="statistiques">Statistiques</string>
    <string name="comptes">Comptes</string>
    <string name="categories">Catégories</string>
    <string name="addAccount">Ajouter un compte</string>
    <string name="goToAccount">Vers mes compte</string>
    <string name="account_name">Nom du compte</string>
    <string name="account_description">Description</string>
    <string name="currency">Devise</string>
    <string name="initial_balance">Solde de départ</string>
    <string name="save">Ajouter mon compte</string>
    <string name="cancel">Annuler</string>
    <string name="account_title">Compte</string>
    <string name="done">Fait</string>
    <string name="transfer_amount">Montant a transférer</string>
    <string name="amount">Montant</string>
    <string name="transfer">Transfert</string>
    <string name="select_source_account">De</string>
    <string name="select_destination_account">Vers</string>
    <string name="addRecurrency">Ajouter une récurrence</string>
    <string name="new_category">Ajouter une categorie</string>
    <string name="ajouter">Ajouter</string>
    <string name="nav_Home">Home</string>
    <string name="nav_Categories">Categories</string>
    <string name="nav_Transfert">Transfert</string>
    <string name="nav_Accounts">Accounts</string>
    <string name="nav_Statistiques">Statisitiques</string>
    <string name="add_cat">Ajouter une categorie</string>
    <string name="category_name_title">Nom de la categorie :\n</string>
    <string name="category_name_edit_text">Entrez le nom de la categorie ici</string>
    <string name="revenu">Mes revenus</string>
    <string name="depense">Mes dépenses</string>
    <string name="account_name_edit_text">Ajoutez un nom de compte</string>
    <string name="account_currency_title">Ajouter une devise</string>
    <string name="account_currency">€, $,...</string>
    <string name="solde_depart">Solde de départ</string>
    <string name="solde_depart_edit_text">Solde</string>
    <string name="select_photo">Veuillez choisir une icone</string>
    <string name="user_name">Nom</string>
    <string name="user_lastname">Prénom</string>
    <string name="login">Commencer</string>
    <string name="welcome_message">Bienvenue sur EconoMe</string>
    <string name="transaction">Transaction</string>
    <string name="addTransaction">Ajouter une transaction</string>
    <string name="transaction_name">Nom de la transaction</string>
    <string name="solde_transaction">Montant</string>
    <string name="nav_Transaction">Transactions</string>
    <string name="select_category_prompt">Sélectionner la catégorie</string>
    <string name="select_acoount_prompt">Sélectionner le compte</string>
    <string name="filtre_month">Filtrer par mois</string>
    <string name="add_expense">ajouter une transaction</string>
    <string name="month">Mois actuel</string>
    <string name="year">Année actuelle</string>
    <string name="categoriesPerMonth">Catégories ce mois-ci</string>
    <string name="date">Sélectionner la date</string>
    <string name="select_type">Sélectionner le type de transaction</string>
    <string name="chercher_location">Entrez une adresse</string>

    <string-array name="currency_array">
        <item>EUR - Euro</item>
        <item>USD - US Dollar</item>
        <item>JPY - Japanese Yen</item>
        <item>GBP - Livre Sterling</item>
        <item>CHF - Franc Suisse</item>
    </string-array>

    <string-array name="months_array">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
        <item>All</item>
    </string-array>

    <string-array name="transaction_type">
        <item>Dépense</item>
        <item>Revenu</item>
    </string-array>


    <string name="circle_demo_label">Circle Demo</string>
    <string name="circle_demo_details">Demonstrate how to add circles to a map</string>
    <string name="properties_circle">Properties for Circle(s)</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="pattern_solid">Solid</string>
    <string name="fill_alpha">Fill Alpha</string>
    <string name="fill_hue">Fill Hue</string>
    <string name="stroke_alpha">Stroke Alpha</string>
    <string name="stroke_hue">Stroke Hue</string>
    <string name="stroke_joint_type">Stroke Joint Type</string>
    <string name="stroke_pattern">Stroke Pattern</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="clickable">Clickable</string>
    <string name="retour">Retour</string>

</resources>