<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/accountName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_name"/>

    <EditText
        android:id="@+id/accountCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/currency"/>

    <EditText
        android:id="@+id/accountBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/initial_balance"
        android:inputType="numberDecimal"/>
</LinearLayout>
