<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_source_account"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/sourceAccountSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_destination_account"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/destinationAccountSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/transferAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
