<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <AutoCompleteTextView
            android:id="@+id/sourceAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_source_account"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <AutoCompleteTextView
            android:id="@+id/destinationAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_destination_account"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/transferAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transfertBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfert"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"/>
</LinearLayout>
