<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/dialogName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_cat"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="16dp"
        android:textColor="#003366" />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name_adding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name_edit_text"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="#003366"
            android:textColor="#003366"
            android:layout_marginBottom="200dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:id="@+id/addCat"
        android:backgroundTint="#003366"
        android:textColor="@color/white"
        android:text="@string/ajouter">
    </com.google.android.material.button.MaterialButton>
</LinearLayout>