<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#003366">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:tint="@color/white"
                android:layout_marginRight="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hello"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_user"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Balance"
            android:textColor="@color/white"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solde"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/topbar"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#CBCBDD"
            android:elevation="4dp"
            app:cardCornerRadius="12dp">

            <!-- Add your hardcoded account views here -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- First hardcoded account item -->
                <include layout="@layout/item_account" />

                <!-- Second hardcoded account item -->
                <include layout="@layout/item_account" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addAccount"
            android:text="@string/addAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#003366"
            android:textColor="#FFFFFF"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transfertButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_below="@id/accounts">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:text="@string/transfert"
                android:id="@+id/btnTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#003366"
                android:textColor="#FFFFFF"
                android:contentDescription="@string/transfert"/>

            <Button
                android:id="@+id/fabAddExpense"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_add_circle"
                android:contentDescription="add_expense_button_description"
                android:src="@android:drawable/ic_input_add"
                android:tint="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>