<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom"
        android:background="#003366">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_user"
                android:tint="@color/white"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hello"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    android:fontFamily="@font/alata"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom_user"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/alata"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:gravity="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Balance"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:fontFamily="@font/alata"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solde"
                android:textColor="@color/green"
                android:textSize="13sp"
                android:fontFamily="@font/alata"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/topbar"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_linear_layout"
            android:elevation="4dp"
            app:cardCornerRadius="12dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="be.helmo.projetmobile.view.AccountListFragment">
                <!--android:name="androidx.navigation.fragment.NavHostFragment"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph">-->
            </androidx.fragment.app.FragmentContainerView>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/addAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/alata"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/addAccount"
            android:textColor="@color/white"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transfertButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/accounts"
        android:gravity="bottom"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnTransfer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:contentDescription="@string/transfert"
                android:fontFamily="@font/alata"
                android:text="@string/transfert"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/AddExpense"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/ic_add_circle"
                android:focusable="true"
                android:contentDescription="add_expense_button_description"
                android:fontFamily="@font/alata"
                android:tint="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>